# DE_PROJECT

./: .config.conf  .gitignore  .gitingnore  README.md  brand_country.py  carsome_clean.csv  carsome_dag.py  carsome_etl.py  carsome_scrape.py  clean_data.py  config.conf  customer_data.py  docker-compose.yaml  main.py  manufacturer_country.json  merge_df.py  send_mail.py
dags/: carsome_web_scrape_dag.py  test_dag.py
dags/script/: carsome_web_scrape_insert_to_postgres.py  carsome_web_scrape_then_csv.py  convert_json_data_to_csv.py  customer_data.py  etl_then_insert_to_curated_zone_postgres.py  get_data_from_postgres_to_gcs.py  get_fake_customer_data_from_api.py  get_max_page.py  load_data_from_gcs_to_bigquery.py  merge_df.py  pyproject.toml  upload_csv_to_gcs.py
import_data/: manufacturer_country.json
output/: carsome_clean.csv  carsome_web_scraped.csv  crt_carsome_web_scraped.csv  fake_customer_data.csv  final_carsome.csv  high_salary_cust.csv  manufactured_country.csv  manufactured_country_of_each_brand.csv
script/: brand_country.py  carsome_etl.py
